<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>runtime</artifactId>
        <groupId>org.assimbly</groupId>
        <version>6.0.0</version>
    </parent>

    <name>integration</name>
    <packaging>jar</packaging>

    <artifactId>integration</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Temporary Staging Repository</name>
            <url>https://maven.pkg.github.com/assimbly/runtime</url>
        </repository>
    </distributionManagement>

    <dependencies>

        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>common-base</artifactId>
            <version>${assimbly.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>dil</artifactId>
            <version>${assimbly.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                        <configuration>
                            <toolchains>
                                <jdk>
                                    <version>25</version>
                                </jdk>
                            </toolchains>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>